# aumai-trustforge

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_trustforge/: __init__.py  async_core.py  cli.py  core.py  integration.py  llm_assessor.py  models.py  store.py
tests/: conftest.py  test_cli.py  test_core.py  test_foundation.py  test_models.py
