[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumai-trustforge"
version = "0.1.0"
description = "Generic trust scoring for AI agents across 4 dimensions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AumAI Contributors", email = "dev@aumai.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/aumai/aumai-trustforge"
Documentation = "https://docs.aumai.dev/aumai-trustforge"
Repository = "https://github.com/aumai/aumai-trustforge"
Issues = "https://github.com/aumai/aumai-trustforge/issues"

[project.scripts]
aumai-trustforge = "aumai_trustforge.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B"]

[tool.ruff.lint.per-file-ignores]
# assert is the idiomatic assertion mechanism in pytest; S101 adds no value in tests.
# ANN rules do not apply to test functions (no public API contract).
# E501 long lines in test comments are acceptable.
"tests/**" = ["S101", "ANN", "E501"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
